# devopscorner-container

./: CHANGELOG.md  DEMO.md  Makefile  README.md  clone.json  container-dockerhub.sh  container-ecr.sh  run-docker.sh
compose/docker/cicd-codebuild/: Dockerfile  Dockerfile-CodeBuild-2.0  Dockerfile-CodeBuild-3.0  Dockerfile-CodeBuild-4.0  Dockerfile-CodeBuild-5.0  Dockerfile-CodeBuild-LocalBuild  Makefile.am  Makefile.in  docker-build.sh  docker-compose.yml  docker-push.sh  dockerhub-push.sh  dockerhub-tag.sh  start-build-amd64.sh  start-build-multiarch.sh  start-build-singlearch-local.sh  start-build-singlearch.sh  start-build.sh  start-buildx-amd64-codebuild.sh  start-buildx-amd64-localbuilds.sh
compose/docker/cicd-codebuild/arch-amd64/: Dockerfile  Dockerfile-CodeBuild-2.0  Dockerfile-CodeBuild-3.0  Dockerfile-CodeBuild-4.0  Dockerfile-CodeBuild-LocalBuild
compose/docker/cicd-ubuntu/: Dockerfile  Dockerfile-Ubuntu-16.04  Dockerfile-Ubuntu-18.04  Dockerfile-Ubuntu-20.04  Dockerfile-Ubuntu-22.04  Makefile.am  Makefile.in  docker-build.sh  docker-compose.yml  docker-push.sh  dockerhub-push.sh  dockerhub-tag.sh  start-build-amd64.sh  start-build-arm64.sh  start-build-multiarch.sh  start-build.sh  start-buildx-amd64.sh  start-buildx-arm64.sh
compose/docker/cicd-ubuntu/arch-amd64/: Dockerfile  Dockerfile-Ubuntu-16.04  Dockerfile-Ubuntu-18.04  Dockerfile-Ubuntu-20.04  Dockerfile-Ubuntu-22.04
compose/docker/psql-ubuntu/: Dockerfile  Dockerfile-Datadog  Makefile.am  Makefile.in  docker-build.sh  docker-push.sh  dockerhub-build.sh  dockerhub-push.sh  dockerhub-tag.sh
(+318 files in other folders)
